# temp-email-phone

./: .gitignore  README.md  api-test.py  eslint.config.js  package-lock.json  package.json  prd.md  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: export-desktop.yml
memory-bank/: README.md  SESSION.md  activeContext.md  master-plan.md  projectbrief.md
memory-bank/logs/: 2026-04-14.md  2026-04-15.md
scripts/: export-local.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/api/: contracts.ts
src/lib/services/: localStorageService.ts  mailtmService.ts  refreshService.ts  smsService.test.ts  smsService.ts
src/lib/stores/: appStore.ts
src/lib/utils/: mask.ts  otp.test.ts  otp.ts  phoneChange.test.ts  phoneChange.ts  phonePoolParser.test.ts  phonePoolParser.ts
src/routes/: +layout.svelte  +page.svelte
src/styles/: app.css
