[package]
name = "temp_inbox_manager"
version = "0.1.0"
description = "Temp Inbox Manager desktop scaffold"
authors = ["Temp Inbox Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "temp_inbox_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tauri = { version = "2.5.6", features = [] }
